--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@setemiojo/eslint-config": "^6.0.0",
     "@vitejs/plugin-react": "^5.1.0",
-    "eslint": "^8.46.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
